# a2a-samples

samples/js/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
samples/js/src/: cli.ts  web-client-agent-card.json  web-client.ts
samples/js/src/agents/coder/: index.ts
samples/js/src/agents/content-editor/: index.ts
samples/js/src/agents/movie-agent/: README.md  agent-card.json  agentAdapter.ts  example.sessionPackage.json  feedback.json  feedbackDatabase.ts  feedbackStorage.ts  genkit.ts  index.ts  session.ts  tmdb.ts  tools.ts
samples/js/src/public/: README.md  index.html
samples/js/src/types/: permissionless.d.ts
samples/python/agents/airbnb_planner_multiagent/: README.md  pyproject.toml
samples/python/agents/airbnb_planner_multiagent/airbnb_agent/: README.md  __init__.py  __main__.py  agent_executor.py  airbnb_agent.py  base_agent.py  example.env  finder_agent.py  reserve_agent.py
samples/python/agents/airbnb_planner_multiagent/common_utils/: erc8004_adapter.py
samples/python/agents/airbnb_planner_multiagent/host_agent/: __main__.py  example.env  remote_agent_connection.py  routing_agent.py
samples/python/agents/airbnb_planner_multiagent/weather_agent/: README.md  __main__.py  example.env  weather_executor.py
samples/python/agents/github-agent/: pyproject.toml
